# star-rail-conductor

./: Dockerfile  supervisor.conf
backend/: main.py  pyproject.toml
backend/endpoints/: character.py  version.py
backend/models/: character.py
backend/utils/: constants.py  enums.py
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/.bun/cache/: 006d88d5c3632fae.npm  00d14661ecec629f.npm  0157f28dffbb32d6.npm  020e3d0a121921de.npm  020f06b75f9a4230.npm  021f5b5fe2c4d312.npm  02aca3f90f8bd98e.npm  02f3ce6c64d27406.npm  038f64bac9a6c378.npm  05ed5331e4a4d393.npm  07061fd8ae6ea548.npm  074773cdbc93b991.npm  08ca4eb174db88e1.npm  093c52d5febf73d2.npm  09885b3efe2688d9.npm  09c4c1692c1a6a5f.npm  0b80dd5be35bde53.npm  0d4988dd279b7288.npm  0f66e177805f29c7.npm  0fdd542f472b78a4.npm  12f348c119560d99.npm  1385e8305d0425b3.npm  14c3ca19a2c22f4e.npm  17b2eefad9798ebb.npm  1858b8d4c4409498.npm  18968d3a67e196eb.npm  1a11837c25a43f31.npm  1a81f487a1bfde54.npm  1b526a4df839f96e.npm  1f83e8e03c6d1043.npm  1fe7c3ba06d814c0.npm  24ff85faa25821ab.npm  25ac6742927fc9b3.npm  25ca1a0af2ecffb5.npm  25cf800b852b06c9.npm  2637d8de8f89bbc0.npm  28ea5501bb38ee9c.npm  28edde9c05eebf59.npm  28f5767e591c8192.npm  29743452efb4ef68.npm  (+237 more)
frontend/src/: app.css
frontend/src/components/navigation/: Link.svelte  Sidebar.svelte  types.d.ts
frontend/src/components/theme/: ThemeWatcher.svelte
frontend/src/lib/: types.d.ts
frontend/src/routes/: +layout.svelte
resources/index_min/en/: characters.json  elements.json  nickname.json  paths.json
(+2 files in other folders)
